easyofuse 命令行工具  常用词修改

--- a/zh-CN/7.reference/7.command-line-tools/10.cdc/1.overview-of-cdc.md
+++ b/zh-CN/7.reference/7.command-line-tools/10.cdc/1.overview-of-cdc.md
@@ -15,7 +15,7 @@ OceanBase CDC 包括两个组件
 
 obcdc 以动态库的形式对外提供 OceanBase 数据库实时增量（事务）数据。
 
-obcdc 通过 RPC 向 OceanBase 数据库请求各分区的 Clog（Redo）日志，结合各个表、列的 schema 信息（通过 SQL 和 OBServer 交互获得），将 Redo 日志转化为一种中间数据格式（LOGMSG），聚合一个事务涉及的各分区的数据变更，以事务为单位逐行输出变更数据。
+obcdc 通过 RPC 向 OceanBase 数据库请求各分区的 Clog（Redo）日志，结合各个表、列的 schema 信息（通过 SQL 和 OBServer 节点交互获得），将 Redo 日志转化为一种中间数据格式（LOGMSG），聚合一个事务涉及的各分区的数据变更，以事务为单位逐行输出变更数据。
 
 #### obcdc 的应用
 
