--- a/zh-CN/7.reference/7.command-line-tools/10.cdc/3.oblogproxy/1.install-and-deploy-oblogproxy/1.install-and-deploy-oblogproxy-by-using-the-installation-package.md
+++ b/zh-CN/7.reference/7.command-line-tools/10.cdc/3.oblogproxy/1.install-and-deploy-oblogproxy/1.install-and-deploy-oblogproxy-by-using-the-installation-package.md
@@ -13,9 +13,9 @@ oblogproxy 能够解决网络隔离的情况下，订阅增量日志的需求，
   <main id="notice" type='notice'>
     <h4>注意</h4>
     <ul>
-    <li>oblogproxy 配置里面无需指定具体的 OceanBase 集群信息，理论上只要与所有 OBServer 网络连通，且 OceanBase 集群包含配置中的 sys 租户账号和密码，oblogproxy 能同时订阅多个 OceanBase 集群。其中，出于安全考虑，配置的 sys 租户账号和密码通常不对 oblogclient 侧的用户暴露。</li>
+    <li>oblogproxy 配置里面无需指定具体的 OceanBase 集群信息，理论上只要与所有 OBServer 节点网络连通，且 OceanBase 集群包含配置中的 sys 租户账号和密码，oblogproxy 能同时订阅多个 OceanBase 集群。其中，出于安全考虑，配置的 sys 租户账号和密码通常不对 oblogclient 侧的用户暴露。</li>
     <li>oblogproxy 本身是无状态，订阅哪个 OceanBase、哪个库表都由 oblogclient 传入，且增量链路的位点等信息也需要 oblogclient 端自行保存。断开重连后，对于 oblogproxy 来讲，相当于创建全新的链路。</li>
-    <li>oblogproxy 消耗内存较多，建议和 OBServer 分开部署，避免影响数据库性能。</li>
+    <li>oblogproxy 消耗内存较多，建议和 OBServer 节点分开部署，避免影响数据库性能。</li>
     </ul>
   </main>
 
@@ -48,7 +48,7 @@ yum install -y oblogproxy-xxxx.系统版本.x86_64.rpm
     <p>此处的用户名不应包含集群名称或租户名称。</p>
   </main>
 
-您获得 OBServer 的 sys 租户账号和密码后，需要通过加密配置给 oblogproxy.执行以下命令即可得到账号和密码的密文：
+您获得 OBServer 节点的 sys 租户账号和密码后，需要通过加密配置给 oblogproxy.执行以下命令即可得到账号和密码的密文：
 
 ```bash
 # 这里假设账号和密码分别为：user，pswd
