--- a/zh-CN/7.reference/7.command-line-tools/10.cdc/3.oblogproxy/1.install-and-deploy-oblogproxy/2.use-source-code-to-build-an-oblogproxy.md
+++ b/zh-CN/7.reference/7.command-line-tools/10.cdc/3.oblogproxy/1.install-and-deploy-oblogproxy/2.use-source-code-to-build-an-oblogproxy.md
@@ -137,7 +137,7 @@ oblogproxy 单一配置文件，用代码目录下的 `conf.json`。
     <p>此处的用户名不应包含集群名称或租户名称。</p>
   </main>
 
-您获得 OBServer 的 sys 租户账号和密码后，需要通过加密配置给 oblogproxy。执行以下命令即可得到账号和密码的密文：
+您获得 OBServer 节点的 sys 租户账号和密码后，需要通过加密配置给 oblogproxy。执行以下命令即可得到账号和密码的密文：
 
 ```bash
 # 这里假设账号和密码分别为：user，pswd
@@ -207,14 +207,14 @@ bash ./run.sh start
     </ul>
   </main>
 
-### oblogproxy（obcdc）与 OBServer 间 TLS 通信
+### oblogproxy（obcdc）与 OBServer 节点间 TLS 通信
 
   <main id="notice" type='explain'>
     <h4>说明</h4>
-    <p>oblogproxy 运行 obcdc 与 OBServer 进行交互。</p>
+    <p>oblogproxy 运行 obcdc 与 OBServer 节点进行交互。</p>
   </main>
 
 修改 `conf.json` 中以下字段：
 
-* `liboblog_tls`：true，开启与 OBServer 通信的 TLS。
-* `liboblog_tls_cert_path`：OBServer 相关证书文件路径（绝对路径），可以复制 OBServer 部署文件路径下的 `wallet` 文件夹，需要确保此路径包含：ca.pem，client-cert.pem，client-key.pem。
+* `liboblog_tls`：true，开启与 OBServer 节点通信的 TLS。
+* `liboblog_tls_cert_path`：OBServer 节点相关证书文件路径（绝对路径），可以复制 OBServer 节点部署文件路径下的 `wallet` 文件夹，需要确保此路径包含：ca.pem，client-cert.pem，client-key.pem。
