--- a/zh-CN/7.reference/7.command-line-tools/10.cdc/4.oblogmsg/2.description-of-some-oblogmsg-interfaces.md
+++ b/zh-CN/7.reference/7.command-line-tools/10.cdc/4.oblogmsg/2.description-of-some-oblogmsg-interfaces.md
@@ -4,7 +4,7 @@
 
 |                                 接口命令                                 |                                           返回值                                           |                                                                              参数说明                                                                               |                                     功能描述                                      |
 |----------------------------------------------------------------------|-----------------------------------------------------------------------------------------|-----------------------------------------------------------------------------------------------------------------------------------------------------------------|-------------------------------------------------------------------------------|
-| void ILogRecord::setSrcType(int type)                                | 无返回值。                                                                                   | type：有效值有 0x00、0x01、0x02、0x03、0x04、0x05，对应数据源分别是MYSQL、OCEANBASE、HBASE、ORACLE、OCEANBASE_1_0、DB2。 </br>**说明** </br>obcdc 设置的值是 0x04,即数据源是 OCEANBASE_1_0。 | 设置数据源的类型。                                                                     |
+| void ILogRecord::setSrcType(int type)                                | 无返回值。                                                                                   | type：有效值有 0x00、0x01、0x02、0x03、0x04、0x05，对应数据源分别是MySQL、OceanBase、Hbase、Oracle、OceanBase_1_0、DB2。 </br>**说明** </br>obcdc 设置的值是 0x04,即数据源是 OceanBase_1_0。 | 设置数据源的类型。                                                                     |
 | void ILogRecord::setCheckpoint(uint64_t file, uint64_t offset)       | 无返回值。                                                                                   | file：一个秒级的 unix 时间戳。 offset：file 参数中 unix 时间戳的微秒级。                                                                                              | 设置当前的分析位点信息。                                                                  |
 | int ILogRecord::setRecordType(int aType)                             | 固定返回 0。                                                                                 | aType：一般有七种类型 插入操作 0x00(EINSERT)、更新操作 0x01(EUPDATE)、删除操作 0x02(EDELETE)、心跳包 0x04(HEARTBEAT)、事物开始 0x06(EBEGIN)、事物提交 0x07(ECOMMIT)、DDL 操作0x08(EDDL)。               | 设置一条 record 的操作类型。                                                            |
 | void ILogRecord::setDbname(const char \*dbname)                      | 无返回值。                                                                                   | dbname： record 来源的数据库名字。                                                                                                                                        | 设置一条 record 来源的 db 名字。                                                        |
@@ -34,7 +34,7 @@
 |                                    接口命令                                     |                                                                                  返回值                                                                                   |                       参数说明                       |                              功能描述                               |
 |-----------------------------------------------------------------------------|------------------------------------------------------------------------------------------------------------------------------------------------------------------------|--------------------------------------------------|-----------------------------------------------------------------|
 | int ILogRecord::parse(const void\* ptr, size_t size)                        | 0：成功。 其他值：失败。                                                                                                                                          | ptr：保存着序列化数据的首地址。 size：序列化数据的长度。 | 反序列化一个 record。                                                  |
-| int ILogRecord::getSrcType()                                                | 返回一个 int 型数值，有效值有 0x00、0x01、0x02、0x03、0x04、0x05，对应数据源分别是MYSQL、OCEANBASE、HBASE、ORACLE、OCEANBASE_1_0、DB2。 </br>**说明** </br>obcdc 设置的值是 0x04，即数据源是 OCEANBASE_1_0。 |                                                  | 获取数据源的类型。                                                       |
+| int ILogRecord::getSrcType()                                                | 返回一个 int 型数值，有效值有 0x00、0x01、0x02、0x03、0x04、0x05，对应数据源分别是MySQL、OceanBase、Hbase、Oracle、OceanBase_1_0、DB2。 </br>**说明** </br>obcdc 设置的值是 0x04，即数据源是 OceanBase_1_0。 |                                                  | 获取数据源的类型。                                                       |
 | uint64_t ILogRecord::getCheckpoint1()/uint64_t ILogRecord::getCheckpoint2() | getCheckpoint1：返回一个秒级的 unix 时间戳。 getCheckpoint2：返回 unix 时间戳的微秒级，可利用  getCheckpoint1\*1000000+getCheckpoint2 作为分析的断点位置。                                 |                                                  | 获取分析的位点信息。                                                      |
 | int ILogRecord::recordType()                                                | 返回一个 int 类型数值，一般有七种类型：插入操作0x00(EINSERT)、更新操作0x01(EUPDATE)、删除操作0x02(EDELETE)、心跳包0x04(HEARTBEAT)、事物开始0x06(EBEGIN)、事物提交0x07(ECOMMIT)、DDL操作0x08(EDDL)。                     |                                                  | 获取一条 record 的操作类型。                                              |
 | const char\* ILogRecord::dbname() const                                     | 返回一个 char\* 类型的指针，该指针指向 record 来源的数据库名字。                                                                                                                               |                                                  | 获取一条 record 来源的 db 名字。                                          |
