--- a/zh-CN/7.reference/7.command-line-tools/5.oceanbase-connector-j.md
+++ b/zh-CN/7.reference/7.command-line-tools/5.oceanbase-connector-j.md
@@ -6,15 +6,15 @@ JDBC 标准由 Sun Microsystems 定义，通过标准 `java.sql` 接口实现，
 
 ## OceanBase Connector/J 驱动程序 
 
-OceanBase Connector/J 驱动程序属于 JDBC Type 4 驱动类型，可以通过本地协议直接与数据库引擎通信。OBServer 支持 OceanBase Connector/J 驱动，同时完全兼容 MySQL 原生的 JDBC 驱动（MySQL Connector Java）。OceanBase Connector/J 完全兼容 MySQL JDBC 的使用方式，可以自动识别 OceanBase 数据库的运行模式是 MySQL 还是 Oracle，并在协议层同时兼容这两种模式。
+OceanBase Connector/J 驱动程序属于 JDBC Type 4 驱动类型，可以通过本地协议直接与数据库引擎通信。OBServer 节点支持 OceanBase Connector/J 驱动，同时完全兼容 MySQL 原生的 JDBC 驱动（MySQL Connector Java）。OceanBase Connector/J 完全兼容 MySQL JDBC 的使用方式，可以自动识别 OceanBase 数据库的运行模式是 MySQL 还是 Oracle，并在协议层同时兼容这两种模式。
 
 OceanBase Connector/J 驱动程序兼容 OB2.0 协议。
   <main id="notice" type='notice'>
     <h4>注意</h4>
-    <p>OBServer 会依据 JDBC 驱动连接时的租户名称判断运行模式为 MySQL 或者 Oracle。Oracle 模式的租户只允许使用 Oracle 兼容的 SQL 语法。</p>
+    <p>OBServer 节点会依据 JDBC 驱动连接时的租户名称判断运行模式为 MySQL 或者 Oracle。Oracle 模式的租户只允许使用 Oracle 兼容的 SQL 语法。</p>
   </main>
 
-除了支持标准的 JDBC 应用程序编程接口（API），OceanBase Connector/J 还兼容 Oracle Driver 的使用方式，OBServer 的 Oracle 模式兼容 Oracle 的大部分语法。
+除了支持标准的 JDBC 应用程序编程接口（API），OceanBase Connector/J 还兼容 Oracle Driver 的使用方式，OBServer 节点的 Oracle 模式兼容 Oracle 的大部分语法。
 
 ## 主要功能 
 
