--- a/zh-CN/7.reference/7.command-line-tools/7.ob-admin/3.clog/5.transaction-information-of-clog.md
+++ b/zh-CN/7.reference/7.command-line-tools/7.ob-admin/3.clog/5.transaction-information-of-clog.md
@@ -6,7 +6,7 @@
 
 根据事务的操作类型以及访问数据的分布，可以将事务分为两种类型：
 
-* 本地单分区事务：事务信息的维护与该事务的访问数据在同一个节点上（同一个 OBServer），且该事务仅访问同一个数据分区内的数据。
+* 本地单分区事务：事务信息的维护与该事务的访问数据在同一个节点上（同一个 OBServer 节点），且该事务仅访问同一个数据分区内的数据。
 * 分布式事务：事务信息的维护与该事务的访问数据在不同节点上，或者事务访问多个数据分区。
 
 对于事务类型的详细说明，请参考 [本地事务](../../../1.oceanbase-database-concepts/8.transaction-management/1.transaction/7.local-transaction.md)、[分布式事务](../../../1.oceanbase-database-concepts/8.transaction-management/1.transaction/8.distributed-transactions-1/1.overview-of-distributed-transactions.md)。
@@ -52,7 +52,7 @@
 
 ## 事务标识符 （Transaction ID）
 
-事务标识符主要用于区分 OBServer 内部的不同事务。因此，事务标识符需要具有唯一性，不同事务具有不同的事务标识符。
+事务标识符主要用于区分 OBServer 节点内部的不同事务。因此，事务标识符需要具有唯一性，不同事务具有不同的事务标识符。
 为了实现事务标识符的唯一性，事务标识符的结构如下所示：
 
 ```java
@@ -68,8 +68,8 @@ class ObTransID
 下表列出了字段名的详细信息。
 | 字段名 | 说明 |
 |--------|-----|
-| `server_`    | 维护该事务标识符的 OBServer 的 IP 地址。 |
-| `inc_`       | OBServer 维护的单调递增值，OBServer 重启后重新计数。|
+| `server_`    | 维护该事务标识符的 OBServer 节点的 IP 地址。 |
+| `inc_`       | OBServer 节点维护的单调递增值，OBServer 节点重启后重新计数。|
 | `timestamp_` | 创建该事务标志符时的本地物理时钟值（Unix时间戳）。|
 | `hv_`        | 根据以上三个字段计算得到的 hash 值。|
 
