--- a/zh-CN/7.reference/7.command-line-tools/8.ob-agent/4.obagent-metrics/1.metrics-exposed-by-exporter.md
+++ b/zh-CN/7.reference/7.command-line-tools/8.ob-agent/4.obagent-metrics/1.metrics-exposed-by-exporter.md
@@ -41,13 +41,13 @@
 | ob_waitevent_wait_total                  | ob_cluster_id,ob_cluster_name,obzone,svr_ip,tenant_name            | 等待事件总等待次数          | counter                             |
 | ob_disk_free_bytes                       | ob_cluster_id,ob_cluster_name,obzone,svr_ip                        | OceanBase 磁盘剩余大小   | gauge                               |
 | ob_disk_total_bytes                      | ob_cluster_id,ob_cluster_name,obzone,svr_ip                        | OceanBase 磁盘总大小    | gauge                               |
-| ob_memstore_active_bytes                 | ob_cluster_id,ob_cluster_name,obzone,svr_ip,tenant_name            | 活跃 memstore 大小     | gauge                               |
-| ob_memstore_freeze_times                 | ob_cluster_id,ob_cluster_name,obzone,svr_ip,tenant_name            | memstore 冻结次数      | counter                             |
-| ob_memstore_freeze_trigger_bytes         | ob_cluster_id,ob_cluster_name,obzone,svr_ip,tenant_name            | memstore 冻结阈值      | gauge                               |
-| ob_memstore_total_bytes                  | ob_cluster_id,ob_cluster_name,obzone,svr_ip,tenant_name            | memstore 总大小       | gauge                               |
-| ob_server_resource_cpu                   | ob_cluster_id,ob_cluster_name,obzone,svr_ip                        | OBServer 可用 CPU 数  | gauge                               |
-| ob_server_resource_cpu_assigned          | ob_cluster_id,ob_cluster_name,obzone,svr_ip                        | OBServer 已分配 CPU 数 | gauge                               |
-| ob_server_resource_memory_bytes          | ob_cluster_id,ob_cluster_name,obzone,svr_ip                        | OBServer 可用内存大小    | gauge                               |
-| ob_server_resource_memory_assigned_bytes | ob_cluster_id,ob_cluster_name,obzone,svr_ip                        | OBServer 已分配内存大小   | gauge                               |
-| ob_unit_num                              | ob_cluster_id,ob_cluster_name,obzone,svr_ip                        | OBServer unit 数量   | gauge                               |
+| ob_memstore_active_bytes                 | ob_cluster_id,ob_cluster_name,obzone,svr_ip,tenant_name            | 活跃 MemStore 大小     | gauge                               |
+| ob_memstore_freeze_times                 | ob_cluster_id,ob_cluster_name,obzone,svr_ip,tenant_name            | MemStore 冻结次数      | counter                             |
+| ob_memstore_freeze_trigger_bytes         | ob_cluster_id,ob_cluster_name,obzone,svr_ip,tenant_name            | MemStore 冻结阈值      | gauge                               |
+| ob_memstore_total_bytes                  | ob_cluster_id,ob_cluster_name,obzone,svr_ip,tenant_name            | MemStore 总大小       | gauge                               |
+| ob_server_resource_cpu                   | ob_cluster_id,ob_cluster_name,obzone,svr_ip                        | OBServer 节点可用 CPU 数  | gauge                               |
+| ob_server_resource_cpu_assigned          | ob_cluster_id,ob_cluster_name,obzone,svr_ip                        | OBServer 节点已分配 CPU 数 | gauge                               |
+| ob_server_resource_memory_bytes          | ob_cluster_id,ob_cluster_name,obzone,svr_ip                        | OBServer 节点可用内存大小    | gauge                               |
+| ob_server_resource_memory_assigned_bytes | ob_cluster_id,ob_cluster_name,obzone,svr_ip                        | OBServer 节点已分配内存大小   | gauge                               |
+| ob_unit_num                              | ob_cluster_id,ob_cluster_name,obzone,svr_ip                        | OBServer 节点Unit 数量   | gauge                               |
 | ob_sysstat                               | ob_cluster_id,ob_cluster_name,obzone,svr_ip,tenant_name,stat_id    | OceanBase 内部统计项    | 不同的 stat_id，ob_sysstat 不相同，参考对应部分解释 |
