--- a/zh-CN/7.reference/7.command-line-tools/11.dooba.md
+++ b/zh-CN/7.reference/7.command-line-tools/11.dooba.md
@@ -12,13 +12,13 @@ DOOBA 工具的脚本文件 [dooba.py](https://github.com/oceanbase/oceanbase/bl
 
   <main id="notice" type='explain'>
     <h4>说明</h4>
-    <p>早期的 OBPROXY（版本低于 2.0.0）可能不完全兼容 MySQL 8.0 的连接协议，因此，您需尽量安装版本为 5.5/5.6/5.7 的 MySQL 客户端。</p>
+    <p>早期的 ODP（版本低于 2.0.0）可能不完全兼容 MySQL 8.0 的连接协议，因此，您需尽量安装版本为 5.5/5.6/5.7 的 MySQL 客户端。</p>
   </main>
 
 DOOBA 使用命令如下：
 
 ```sql
-python dooba.py -h OBPROXY地址 -u root@sys#集群名 -P OBPROXY端口 -p密码
+python dooba.py -h ODP地址 -u root@sys#集群名 -P ODP端口 -p密码
 
 // 例如：
 python dooba.py -h 172.20.249.54 -u root@sys#obce-3zones -P 2883 -pxxxxxx
@@ -86,14 +86,14 @@ ORDER BY t1.con_id, t2.zone, t1.svr_ip, t1.svr_port;
   
 * `Memory`
 
-  Memstore 内存的实时监控。默认情况下，租户可用内存的一半用于 Memstore 的内存，用于存放业务写操作带来的变化的数据。
+  MemStore 内存的实时监控。默认情况下，租户可用内存的一半用于 MemStore 的内存，用于存放业务写操作带来的变化的数据。
 
   OceanBase 数据库的特色之一就是写只记录数据的变化部分，并且数据会尽可能的维持在内存里不落盘，直到增量内存利用率达到阈值（参数 `freeze_trigger_percentage`）后触发转储或合并才将数据落盘并释放内存。
 
   下面介绍一下转储和合并的概念：
 
   * 转储是内存中增量数据直接写到磁盘暂存。类似与传统数据库的 `checkpoint`，对租户性能影响很小并且可以调优。
-  * 合并是内存中增量数据跟磁盘中基线数据在内存中合并为最新的数据块（`sstable`）再写回到数据文件中。合并对租户性能影响稍大一些并且也是可以调优的。
+  * 合并是内存中增量数据跟磁盘中基线数据在内存中合并为最新的数据块（`SSTable`）再写回到数据文件中。合并对租户性能影响稍大一些并且也是可以调优的。
 
   通常会建议尽量发起转储，等凌晨低峰期时再发起合并操作。合并可以定时触发，也可以手动触发。当转储次数（参数 `minor_freeze_times` ）用尽时也会自动触发合并。
 
