--- a/zh-CN/6.manage/3.replica-management/3.flow-distribution.md
+++ b/zh-CN/6.manage/3.replica-management/3.flow-distribution.md
@@ -4,6 +4,14 @@
 
 流量分布通过 Primary Zone 来描述，Primary Zone 描述了 Leader 副本的偏好位置，而 Leader 副本承载了业务的强一致读写流量，即 Primary Zone 决定了 OceanBase 数据库的流量分布。
 
+## 流量介绍
+
+数据库系统在应用架构中承担了数据存储和查询的功能，应用的读写请求称为数据库流量。
+
+数据库流量分为强一致读写流量和弱一致读流量，强一致读写流量及 DML 流量由 OceanBase 的 Leader 副本提供服务，弱一致读流量由 Leader 副本 和 Follower 副本提供服务。
+
+OBProxy 提供了数据库流量的路由选择能力，OBProxy 实现了一个简单的 SQL Parser 模块，解析出 SQL 中的库名、表名及 hint ，从而根据业务SQL、路由规则、及 OBServer 的状态，选择最合适的一个 OBServer 转发请求。
+
 ## Primary Zone 介绍
 
 Primary Zone 实际上是一个 Zone 的列表，列表中包含多个 Zone。该列表用如下方式为 Zone 配置优先级：
