--- a/zh-CN/6.manage/1.clutser-management/2.common-cluster-operations/6.isolation-a-node.md
+++ b/zh-CN/6.manage/1.clutser-management/2.common-cluster-operations/6.isolation-a-node.md
@@ -1,18 +1,14 @@
 # 隔离节点
 
-当前节点异常或节点运维变更时，需要先隔离节点，将流量切到其他节点，以免业务受到影响。
+当节点发生异常或者需要运维变更时，可以隔离节点。隔离后，新的读写请求不会路由到该节点上，从而可以隔离故障或者无损的执行运维变更动作。
 
-当节点异常或节点运维变更时，可以隔离节点。隔离后，新的读写请求不会路由到该节点上，从而可以隔离故障或者安全地执行运维动作。
+* 故障隔离场景：节点发生异常时，需要将异常节点与业务流量隔离开来。例如，某机房内有交换机异常，此时某些节点出现丢包、重传，甚至无主选举。为了快速恢复，可以直接隔离这些异常节点。节点恢复后执行 Start 操作恢复节点流量。
 
-* 故障隔离场景：例如，多机房部署架构下，某机房内有交换机异常，此时个别节点出现丢包、重传，甚至无主选举。为了快速恢复，可以直接隔离该机房中的异常节点。
+* 运维变更场景：节点需要运维变更时，需要保证对业务流量的透明无感。例如，某节点服务器需要重启时，为了保证重启过程中不影响业务流量，可以执行节点隔离动作，从而将待重启服务器上的业务流量切到其他节点。重启动作完成后执行 Start 操作恢复节点流量。
 
-* 运维变更场景：例如， OceanBase 集群升级时采用的轮转升级方案，首先隔离一个节点，将用户流量从该节点切到其他节点，然后执行升级动作。该节点升级完成后执行 Start 操作恢复流量，再依次升级其他节点，从而做到升级对用户透明。
+隔离节点，只是将业务流量从该节点切走，并没有改变 Paxos 投票成员的数量。不同的隔离命令有不同的安全级别保证，需要根据执行的具体的隔离命令仔细斟酌后续能够安全执行的动作。隔离命令适用于短时间隔离的场景，需要持续保持关注，提前做好二次故障的应急预案。如果短时间内恢复不了，可以采用替换节点的方式彻底去除隐患，替换节点的详细操作请参见 [替换节点](7.replace-a-node.md）。
 
-隔离节点，只是将用户流量从该节点切走，并没有改变 Paxos 投票成员的数量。如果是故障隔离场景，依然存在风险敞口，此时如果再发生一台机器故障，可能会破坏多数派节点并引起租户无主，适用于短时间隔离的场景，并且需要保持关注，提前做好二次故障的应急预案。如果短时间内恢复不了，可以采用替换节点的方式彻底去除隐患，替换节点的详细操作请参见 [替换节点](7.replace-a-node.md）。
-
-## 背景信息
-
-隔离节点有以下三种方式：
+隔离节点有以下三种命令，不同的隔离命令有不同的安全级别保证：
 
 * 通过 `STOP SERVER` 命令隔离节点
 
@@ -20,140 +16,104 @@
 
 * 通过 `ISOLATE SERVER` 命令隔离节点
 
-使用以上命令隔离节点成功后，该节点的 `status` 字段仍为 `ACTIVE` 不变，但 `stop_time` 字段的值由 `NULL` 变为 Stop Server 的时间点，表示该节点处于 stopped 状态。
+使用上述命令成功隔离节点后，被隔离节点的 `STATUS` 字段仍为 `ACTIVE` 不变，但 `STOP_TIME` 字段的值由 `NULL` 变为隔离操作的时间点，表示该节点处于 `Stopped` 状态。
 
-对于 `STOP SERVER` 命令，假设被执行 `STOP SERVER` 命令的节点为 A，`STOP SERVER` 命令的内部执行逻辑如下：
+## STOP SERVER
 
-1. 由于不允许同时有多个 Zone 的节点被 Stop，故首先检查是否有其他 Zone 的节点被 Stop。如果存在，则不允许对 A 执行 Stop Server 操作。
+命令格式如下，一次支持 Stop 多台 server。
 
-2. 以日志流为单位，检查是否存在无主的日志流。如果存在，则不允许对 A 执行 Stop Server 操作。
+```shell
+obclient [(none)]> ALTER SYSTEM STOP SERVER 'svr_ip1:svr_port1', 'svr_ip2:svr_port2', ...;
+```
 
-3. 以日志流为单位，检查除去 A 及其他非可用状态的节点（包括 `INACTIVE`、stopped（`ACTIVE` 状态且 `stop_time` 字段大于 0）及 `DELETING` 状态的节点），剩余节点上的副本是否依然能形成多数派。如果不能形成多数派，则不允许对 A 执行 Stop Server 操作。
+`STOP SERVER` 是最安全的隔离命令。`STOP SERVER` 不但可以将业务流量从该节点上切走，实现该节点与业务流量隔离的效果，还能保证除被隔离节点以外的其他节点依然能够构成 Paxos 多数派，从而可以安全的对被隔离节点执行任何动作，例如 pstack、调整日志级别等，甚至停止进程。`STOP SERVER` 适用于需要故障隔离和停机运维的场景，是故障隔离和运维变更首选的隔离命令。
 
-4. 以日志流为单位，检查多数派副本的日志是否同步（对比日志流的 Follower 副本和 Leader 副本的 RedoLog 延迟是否在 5 秒以内）。如果检查不通过，则不允许对 A 执行 Stop Server 操作。
+为了保证成功执行后可以安全的对被隔离节点执行任何动作，`STOP SERVER` 命令前置检测比较严格，通过内部各种状态检查，保证目标节点即使停止进程后，集群剩余可用节点的副本仍然能够构成 Paxos 多数派，从而不影响数据库服务的连续性。
 
-5. 以上条件检查通过后，设置 A 的 `stop_time` 字段，并等待 A 上的 Leader 全部切走，然后给客户端返回成功。
+`STOP SERVER` 命令限制如下：
 
-   由于该步骤需要等待 Leader 全部切走，如果该节点上的副本数较多，`STOP SERVER` 命令可能会执行超时，超时后可以重新执行 `STOP SERVER` 命令，直到成功为止。
+1. 不允许同时有多个 Zone 的节点被 Stop，如果同时 Stop 了多个 Zone 的节点，或者已经有其他 Zone 的节点被 Stop，则报错 `-4660，cannot stop server or stop zone in multiple zones`。如果遇到该错误信息，可以通过查询 `DBA_OB_SERVERS` 和 `DBA_OB_ZONES` 视图，确认是否存在多个 Zone 的节点被 Stop。
 
-由于 `STOP SERVER` 命令的前置检查较多，生产环境存在检查不通过而无法隔离的情况。`FORCE STOP SERVER` 命令和 `ISOLATE SERVER` 命令是 `STOP SERVER` 命令的弱化版本，其差异主要在：
+2. `STOP SERVER` 命令通过检查所有租户的所有日志流的 Paxos 成员列表，确认除了目标节点和其他非可用节点外，剩余节点上的副本是否依然能够构成 Paxos 多数派。如果不能构成多数派，则不允许执行 `Stop Server` 操作。
 
-* `FORCE STOP SERVER` 命令的内部执行逻辑，跳过了 `STOP SERVER` 命令逻辑的第 4 步。
+   1. 非可用节点包括：`INACTIVE`、`Stopped`（`ACTIVE` 状态且 `stop_time` 字段大于 0）及 `DELETING` 状态的节点。
+   
+   2. 为了检查日志流的 Paxos 成员列表，要求所有日志流都有 Leader，如果发现日志流没有 Leader，则报错 `-4179`，并且展示有问题的日志流信息。
+   
+      例如：租户 `1001` 的 1 号日志流没有 Leader，则报错信息为 `Tenant(1001) LS(1) has no leader, stop server not allowed`。如果遇到该错误信息，可以通过查询 `GV$OB_LOG_STAT` 视图确认日志流的 Leader 副本信息，排查 Leader 副本不正常的问题。
 
-* `ISOLATE SERVER` 的逻辑，跳过了 `STOP SERVER` 命令逻辑的 2~4 步，并且仅将节点状态在 RS 端标记为 stopped，不再等待 Leader 全部切走，然后给客户端返回成功。
+   3. 如果租户的 Locality 属性变更命令与 `STOP SERVER` 命令并发执行，为了防止误判，禁止在 Locality 变更过程中 Stop 节点。
 
-## 操作步骤
+      例如：租户 `1001` 正在变更 Locality 减少一个副本，日志流的成员列表正在从 A、B、C 变为 A、B，此时如果需要 Stop B 节点，`STOP SERVER` 命令可能误判 B 节点可以被 Stop，从而与减少副本操作冲突。为了避免误判，`STOP SERVER` 命令会报错 `-4179`，并且展示正在变更的租户信息 `Tenant(1001) locality is changing, stop server not allowed`。如果遇到该错误信息，可以通过查询 `DBA_OB_TENANTS` 视图，确认是否存在租户 Locality 变更操作。
 
-在对节点进行异常隔离或者运维操作时，可以使用如下递进方式进行处理：
+   4. 在排除了目标节点和其他非可用节点后，如果剩余节点上的副本不能满足多数派，则报错 `-4179`，并且展示有问题的日志流信息。
 
-1. 使用 `root` 用户登录到集群的 `sys` 租户。
+      例如：租户 `1001` 的 1 号日志流在 Stop 节点后不能满足多数派，则报错信息为 `Tenant(1001) LS(1) has no enough valid paxos member after stop server, stop server not allowed`。如果遇到该错误信息，可以通过查询 `GV$OB_LOG_STAT` 视图，确认日志流的成员列表和副本信息是否满足多数派。
 
-   连接示例如下，连接数据库时请以实际环境为准。
+3. `STOP SERVER` 保证成功执行后，还能够对被隔离节点执行任何侵入性动作。即剩余可用节点上的副本在满足多数派的前提下，还要保证剩余可用节点中的多数派副本的日志是同步的，使得被隔离节点即使停止进程后，剩余节点的日志依然能够形成多数派。
+
+   1. 日志同步判断条件：对比日志流的 Follower 副本和 Leader 副本的最新日志位点，日志位点差距在 5 秒以内即认为日志是同步的。可以通过查询 `GV$OB_LOG_STAT` 视图的 `END_SCN` 字段，获取指定日志流的各个副本的最新日志位点。
+   
+   2. 如果不满足该条件，则报错 `-4179`，并且展示有问题的日志流信息。
+
+      例如：租户 `1001` 的 1 号日志流日志不同步，则报错信息为 `Tenant(1001) LS(1) log not sync, stop server not allowed`。如果遇到该错误信息，可以通过查询 `GV$OB_LOG_STAT` 视图的 `END_SCN` 字段确认日志流副本同步情况。
 
    ```shell
-   obclient -h10.xx.xx.xx -P2883 -uroot@sys -p***** -A
+   # 获取指定日志流副本的最新日志位点信息，并转换成时间戳形式
+   obclient [(none)]> SELECT SCN_TO_TIMESTAMP(END_SCN) FROM GV$OB_LOG_STAT WHERE TENANT_ID = 1001 and LS_ID = 1;
    ```
 
-   有关更加详细的连接数据库的操作指引，请参见 [连接数据库](../../../3.develop/1.application-development-based-on-mysql-mode/1.database-connection-of-mysql/1.connection-mode-overview.md)。
+`STOP SERVER` 是最安全的隔离命令，但同时它的前置条件也是最严格的。在实际应用中，特别是故障应急场景下，可能无法完全满足上述前置条件，进而导致 `STOP SERVER` 命令无法执行成功。因此 OceanBase 数据库提供了另外两种节点隔离命令，`FORCE STOP SERVER` 和 `ISOLATE SERVER`。他们不同程度的放松了前置检查，减少了限制，从而在更多场景下能够成功隔离节点，但节点被隔离后的操作有所限制。任何场景下都应该首选 `STOP SERVER` 命令，`STOP SERVER` 无法成功的情况下可以选择弱化版本的节点隔离命令，但弱化版本的节点隔离后能够执行的操作会有所限制。
 
-2. 对问题节点执行隔离节点操作。
+## FORCE STOP SERVER
 
-   1. 执行 Stop Server 操作。
+相比于 `STOP SERVER` 命令，`FORCE STOP SERVER` 跳过了日志同步检查。`FORCE STOP SERVER` 命令能够保证将业务流量从被隔离节点上切走，但不能保证被隔离节点能够安全的停止进程。强行停止进程后可能破坏 Paxos 多数派，从而影响数据库服务的连续性。
 
-      语句如下：
+`FORCE STOP SERVER` 的典型应用场景：A、B、C 三个节点，B 节点的副本日志存在较大延迟，例如 1 个小时。此时节点 C 出现硬件异常需要停机运维。为了保证隔离后能够安全的停止进程，我们首选 `STOP SERVER` 命令隔离节点，但由于 B 节点的副本日志存在较大延迟，`STOP SERVER` 命令无法执行成功。我们只能退而其次选择 `FORCE STOP SERVER` 命令来隔离节点，首先避免硬件异常对业务流量造成影响。然后排查 B 节点日志延迟的原因，待 B 节点日志实时后再次尝试执行 `STOP SERVER` 命令，成功执行后可以安全的进行停机运维。
 
-      ```sql
-      obclient [(none)]> ALTER SYSTEM STOP SERVER 'svr_ip:svr_port'; 
-      ```
+```shell
+obclient [(none)]> ALTER SYSTEM FORCE STOP SERVER 'svr_ip1:svr_port1', 'svr_ip2:svr_port2', ...;
+```
 
-      示例：
+<main id="notice" type='alert'>
+   <h4>警告</h4>
+   <p><code>FORCE STOP SERVER</code> 仅仅适用于除了待隔离节点外存在其他节点日志延迟的场景，此时隔离节点的目的仅仅是故障隔离，不能进行任何会造成进程停止的侵入性动作。否则会破坏 Paxos 多数派，造成租户无主，影响数据库服务的连续性。</p>
+</main>
 
-      ```sql
-      obclient [(none)]> ALTER SYSTEM STOP SERVER '172.xx.xx.xx:2882'; 
-      ```
+## ISOLATE SERVER
 
-      成功执行后，可以对节点做任何运维操作，可以直接执行第 3 步 kill observer 进程操作，对业务流量无任何影响。
+相比于 `STOP SERVER` 和 `FORCE STOP SERVER`，`ISOLATE SERVER` 的前置检查最为宽松，响应速度最快。它不保证安全性，即不保证目标节点下线后，集群剩余节点的副本可以组成 Paxos 多数派继续提供服务。
 
-      若无法执行成功，请尝试执行 Force Stop Server 操作。
+```shell
+obclient [(none)]> ALTER SYSTEM ISOLATE SERVER 'svr_ip1:svr_port1', 'svr_ip2:svr_port2', ...;
+```
 
-   2. 对问题节点执行 Force Stop Server 操作。
+`ISOLATE SERVER` 命令前置检查放松逻辑如下：
 
-      语句如下：
+1. `ISOLATE SERVER` 命令不再限制多个 Zone 的节点同时隔离，如果已经有其他 Zone 的节点被隔离（执行任何一种隔离命令），也可以执行 `ISOLATE SERVER` 命令。
 
-      ```sql
-      obclient [(none)]> ALTER SYSTEM FORCE STOP SERVER 'svr_ip:svr_port'; 
-      ```
+   典型场景：集群有三个 Zone（Z1、Z2、Z3），Z1 和 Z3 各自一个节点出现故障，需要隔离。Z1 故障节点隔离成功后，如果采用 `STOP SERVER` 或者 `FORCE STOP SERVER` 命令继续隔离 Z2 故障节点，会报错不允许同时隔离多个 Zone。此时仅能执行 `ISOLATE SERVER` 命令，将业务流量从故障节点上切走，隔离后不能进行任何会造成进程停止的侵入性动作。
 
-      示例：
+2. `ISOLATE SERVER` 命令不再检查日志流副本的多数派和日志同步情况，即使不满足相应条件，也可以执行 `ISOLATE SERVER` 命令。
 
-      ```sql
-      obclient [(none)]> ALTER SYSTEM FORCE STOP SERVER '172.xx.xx.xx:2882'; 
-      ```
+   典型场景：日志流初始的 Paxos 成员列表为 A、B、C 三个节点，C 节点机器宕机后永久下线，日志流的成员列表变更为 A、B，处于缺副本状态。此时如果 B 节点发生硬件故障并希望隔离该节点，`STOP SERVER` 和 `FORCE STOP SERVER` 均会失败，报错为剩余副本不满足多数派。此时仅能执行 `ISOLATE SERVER` 命令，将业务流量从故障节点上切走，隔离后不能进行任何会造成进程停止的侵入性动作。
 
-      成功执行后可以对节点做任何运维操作，可以直接执行第 3 步 Kill observer 进程，对业务流量无任何影响。若无法执行成功，尝试执行 Isolate Server 操作。
+`ISOLATE SERVER` 命令限制如下：
 
-   3. 对问题节点执行 Isolate Server 操作。
+当出现多个 Zone 节点被隔离时，`ISOLATE SERVER` 会检查所有租户的 Primary Zone 属性，要求不能同时隔离一个租户 Primary Zone 所在地域的所有 Zone 的节点，以防止租户的读写服务切到其他地域，进而业务请求跨城访问导致耗时大幅增加。
 
-      语句如下：
+可以通过 `DBA_OB_TENANTS` 视图检查租户的 Primary Zone 属性，结合 `DBA_OB_ZONES` 和 `DBA_OB_SERVERS` 视图中已经隔离的 Zone 和节点的信息，确认是否打破上述限制条件。
 
-      ```sql
-      obclient [(none)]> ALTER SYSTEM ISOLATE SERVER 'svr_ip:svr_port'; 
-      ```
+<main id="notice" type='alert'>
+   <h4>警告</h4>
+   <p><code>ISOLATE SERVER</code> 仅仅适用于除了待隔离节点外存在其他节点状态异常的场景，此时隔离节点的目的仅仅是故障隔离，不能进行任何会造成进程停止的侵入性动作。否则会破坏 Paxos 多数派，造成租户无主，影响数据库服务的连续性。</p>
+</main>
 
-      示例：
+## 总结
 
-      ```sql
-      obclient [(none)]> ALTER SYSTEM ISOLATE SERVER '172.xx.xx.xx:2882'; 
-      ```
+任何场景下都应该首选 `STOP SERVER` 命令，成功执行后除了达成故障隔离的目的，还可以保证能够安全的对被隔离节点执行任何应急动作和运维动作。`STOP SERVER` 无法成功的情况下可以选择弱化版本的节点隔离命令，但弱化版本的节点隔离后不能保证能够安全的执行侵入性动作。
 
-      成功执行 Isolate Server 操作后，仅表示该节点为 stopped 状态，RS 会尽力将问题节点上的 Leader 切走，此时不能执行第 3 步 Kill observer 进程。如果必须要执行 Kill observer 进程，可能会有如下问题：
-
-      * 集群中所有日志流副本完好，但问题节点上存在 Leader，Kill observer 进程后会出现部分日志流副本无主选举，短时间影响业务流量。
-
-      * 集群中存在部分日志流已经缺副本，但依然能够达成多数派，Kill observer 进程后会导致部分日志流无法形成多数派，这些日志流在 Kill observer 进程后会长时间无主，长时间影响业务流量。
-
-3. （可选）使用 `kill -9 pid` 命令 Kill observer 进程。
-
-   具体操作如下：
-
-   1. 使用 `admin` 用户登录待停止进程的节点所在的机器。
-
-   2. 通过命令行工具进入 `/home/admin/oceanbase/bin` 目录。
-
-       ```shell
-       [admin@xxx /]$ cd /home/admin/oceanbase/bin
-       ```
-
-   3. 执行以下命令，查看并获取节点的进程 ID。
-
-      ```shell
-      [admin@xxx bin]$ ps -ef | grep observer | grep -v grep
-      admin    103364      1 99  2022 ?        51-17:51:06 /home/admin/oceanbase/bin/observer
-      ```
-
-   4. Kill observer 进程。
-
-      命令如下：
-
-      ```shell
-      admin@xxx oceanbase]$ kill -9 pid
-      ```
-
-      其中，`pid` 为待停止的节点的 observer 进程 ID。
-
-      示例如下：
-
-      ```shell
-      admin@xxx oceanbase]$ kill -9 103364
-      ```
-
-需要强调的是：
-
-* 任何场景下都应该尽量使用 Stop Server 来执行隔离操作，成功执行后可以安全地执行任何运维动作或者应急动作，甚至 Kill observer 进程。
-
-* Force Stop Server 和 Isolate Server 是弱化版本的隔离命令。适用于故障应急场景下 Stop Server 执行时前置检查不通过的情况，不承诺能够安全的 Kill observer 进程。不适用于运维变更场景。
-
-* 隔离节点只是将用户流量从该节点切走，避免用户流量受到该节点异常的影响。不会改变 Paxos 投票成员的数量，但是需要避免隔离期间的二次故障，做好相应应急预案。如果需要长时间隔离，需要执行替换节点的操作，替换节点的详细操作请参见 [替换节点](7.replace-a-node.md）。
+`FORCE STOP SERVER` 适用于除了待隔离节点外存在其他节点日志延迟的场景，`ISOLATE SERVER` 适用于除了待隔离节点外存在其他节点状态异常的场景。此时隔离节点的目的仅仅是故障隔离，不能进行任何会造成进程停止的侵入性运维动作，否则会破坏 Paxos 多数派，造成租户无主，影响数据库服务的连续性。
 
 ## 相关文档
 
