--- a/zh-CN/6.manage/2.tenant-management/5.commom-tenant-operations/12.delete-tenant.md
+++ b/zh-CN/6.manage/2.tenant-management/5.commom-tenant-operations/12.delete-tenant.md
@@ -12,13 +12,13 @@ OceanBase 数据库支持通过 `DROP TENANT` 语句删除租户。
 
 1. 使用 root 用户登录到集群的 sys 租户。
 
-    ```sql
-    $obclient -h172.30.xx.xx -P2883 -uroot@sys#cluster -p**** -A
+    ```shell
+    obclient -h172.30.xx.xx -P2883 -uroot@sys#cluster -p**** -A
     ```
 
-2. 进入 OceanBase 数据库。
+2. 进入 `oceanbase` 数据库。
 
-    ```sql
+    ```shell
     obclient [(none)]> USE oceanbase;
     ```
 
@@ -26,7 +26,7 @@ OceanBase 数据库支持通过 `DROP TENANT` 语句删除租户。
 
    以查询租户 `mq_t1` 的信息为例：
 
-    ```sql
+    ```shell
     obclient [oceanbase]> SELECT * FROM DBA_OB_TENANTS WHERE TENANT_NAME = 'mq_t1';
     +-----------+-------------+-------------+----------------------------+----------------------------+--------------+---------------------------------------------+-------------------+--------------------+--------+---------------+--------+
     | TENANT_ID | TENANT_NAME | TENANT_TYPE | CREATE_TIME                | MODIFY_TIME                | PRIMARY_ZONE | LOCALITY                                    | PREVIOUS_LOCALITY | COMPATIBILITY_MODE | STATUS | IN_RECYCLEBIN | LOCKED |
@@ -42,7 +42,7 @@ OceanBase 数据库支持通过 `DROP TENANT` 语句删除租户。
 
     回收站的详细说明，请参见 [回收站](../../../7.reference/1.oceanbase-database-concepts/10.high-data-reliability-and-availability/4.data-protection/4.recycle-bin.md)。
 
-    ```sql
+    ```shell
     obclient [oceanbase]> SHOW RECYCLEBIN;
     +--------------------------------+----------------+----------+----------------------------+
     | OBJECT_NAME                    | ORIGINAL_NAME  | TYPE     | CREATETIME                 |
@@ -64,21 +64,21 @@ OceanBase 数据库支持通过 `DROP TENANT` 语句删除租户。
 5. 通过 `DROP TENANT` 语句，删除租户。
 
     ```sql
-    DROP TENANT mq_t1;
+    obclient> DROP TENANT mq_t1;
     ```
 
     `DROP TENANT` 语句的详细说明，参见 [DROP TENANT](../../../7.reference/4.development-guide-refactoring/1.sql-syntax/1.system-tenants/11.drop-tenant.md)。
 
 6. 查看 `DBA_OB_TENANTS` 视图，确认租户已经删除成功。
 
-    ```sql
+    ```shell
     obclient [oceanbase]> SELECT * FROM DBA_OB_TENANTS WHERE TENANT_NAME = 'mq_t1';
     Empty set
     ```
 
 7. （可选）在操作步骤 4 中如果开启了回收站功能，则可以通过 `SHOW RECYCLEBIN` 语句查看回收站中的信息。
 
-    ```sql
+    ```shell
     obclient [oceanbase]> SHOW RECYCLEBIN;
     +-------------------------------------+---------------+--------+----------------------------+
     | OBJECT_NAME                         | ORIGINAL_NAME | TYPE   | CREATETIME                 |
