--- a/zh-CN/6.manage/2.tenant-management/5.commom-tenant-operations/15.delete-resource-specification.md
+++ b/zh-CN/6.manage/2.tenant-management/5.commom-tenant-operations/15.delete-resource-specification.md
@@ -4,19 +4,19 @@
 
 ## 前提条件
 
-删除资源规格前必须确保当前资源规格未被使用。如果资源规格正在被使用，则需要先将资源规格从资源池中移出后再删除资源规格。详细操作，参见 [修改资源池配置](9.modify-resource-pool-properties.md)。
+删除资源规格前必须确保当前资源规格未被使用。如果资源规格正在被使用，则需要先将资源规格从资源池中移出后再删除资源规格。详细操作，参见 [修改资源池属性](9.modify-resource-pool-properties.md)。
 
 ## 操作步骤
 
 1. 使用 root 用户登录到集群的 sys 租户。
 
-    ```sql
-    $obclient -h172.30.xx.xx -P2883 -uroot@sys#cluster -p**** -A
+    ```shell
+    obclient -h172.30.xx.xx -P2883 -uroot@sys#cluster -p**** -A
     ```
 
-2. 进入 OceanBase 数据库。
+2. 进入 `oceanbase` 数据库。
 
-    ```sql
+    ```shell
     obclient [(none)]> USE oceanbase;
     ```
 
@@ -24,7 +24,7 @@
 
     示例如下，确认资源规格 `S2_unit_config` 已经不在使用中。
 
-    ```sql
+    ```shell
     obclient [oceanbase]> SELECT a.UNIT_CONFIG_ID, a.NAME AS UNIT_NAME, b.NAME AS POOL_NAME FROM oceanbase.DBA_OB_UNIT_CONFIGS a,oceanbase.DBA_OB_RESOURCE_POOLS b WHERE b.UNIT_CONFIG_ID=a.UNIT_CONFIG_ID;
     +----------------+-------------------------------+--------------------------+
     | UNIT_CONFIG_ID | UNIT_NAME                     | POOL_NAME                |
@@ -49,7 +49,7 @@
 
     以删除资源规格 `S2_unit_config` 为例：
 
-    ```sql
+    ```shell
     obclient [oceanbase]> DROP RESOURCE UNIT S2_unit_config;
     Query OK, 0 rows affected
     ```
@@ -58,7 +58,11 @@
 
 5. 查看 `DBA_OB_UNIT_CONFIGS` 视图，确认资源规格删除成功。
 
-    ```sql
+    ```shell
     obclient [oceanbase]> SELECT * FROM DBA_OB_UNIT_CONFIGS WHERE NAME = 'S2_unit_config';
     Empty set
     ```
+
+## 相关文档
+
+* [修改资源池属性](9.modify-resource-pool-properties.md)
