--- a/zh-CN/6.manage/2.tenant-management/5.commom-tenant-operations/5.view-and-set-whitelist.md
+++ b/zh-CN/6.manage/2.tenant-management/5.commom-tenant-operations/5.view-and-set-whitelist.md
@@ -18,14 +18,14 @@
 
 1. 租户管理员登录数据库。
 
-    ```sql
-    $obclient -h172.30.xx.xx -P2883 -uroot@mq_t1#cluster  -A
+    ```shell
+    obclient -h172.30.xx.xx -P2883 -uroot@mq_t1#cluster  -A
     ```
 
 2. 查看租户白名单。
 
-    ```sql
-    SHOW VARIABLES LIKE 'ob_tcp_invited_nodes';
+    ```shell
+    obclient> SHOW VARIABLES LIKE 'ob_tcp_invited_nodes';
     +----------------------+-------+
     | Variable_name        | Value |
     +----------------------+-------+
@@ -41,34 +41,34 @@
 
 1. 使用 root 用户登录到集群的 sys 租户。
 
-    ```sql
-    $obclient -h172.30.xx.xx -P2883 -uroot@mq_t1#cluster -p**** -A
+    ```shell
+    obclient -h172.30.xx.xx -P2883 -uroot@mq_t1#cluster -p**** -A
     ```
 
 2. 修改租户的白名单配置。
 
-    ```sql
-    ALTER TENANT mq_t1 VARIABLES ob_tcp_invited_nodes = '10.10.10.%';
+    ```shell
+    obclient> ALTER TENANT mq_t1 VARIABLES ob_tcp_invited_nodes = '10.10.10.%';
     ```
 
 ### 用户租户管理员修改本租户白名单
 
 1. 租户管理员登录数据库。
 
-    ```sql
-    $obclient -h172.30.xx.xx -P2883 -uroot@mq_t1#cluster  -A
+    ```shell
+    obclient -h172.30.xx.xx -P2883 -uroot@mq_t1#cluster  -A
     ```
 
 2. 修改租户的白名单配置。
 
-    ```sql
-    SET GLOBAL ob_tcp_invited_nodes='10.10.10.%';
+    ```shell
+    obclient> SET GLOBAL ob_tcp_invited_nodes='10.10.10.%';
     ```
 
 3. 查看修改结果。
 
-    ```sql
-    SHOW VARIABLES LIKE 'ob_tcp_invited_nodes';
+    ```shell
+    obclient> SHOW VARIABLES LIKE 'ob_tcp_invited_nodes';
     +----------------------+------------+
     | Variable_name        | Value      |
     +----------------------+------------+
