--- a/zh-CN/6.manage/2.tenant-management/5.commom-tenant-operations/7.modify-system-variables-of-tenant.md
+++ b/zh-CN/6.manage/2.tenant-management/5.commom-tenant-operations/7.modify-system-variables-of-tenant.md
@@ -20,13 +20,13 @@
 
    以登录 `mq_t1` 租户为例：
 
-    ```sql
-    $obclient -h172.30.xx.xx -P2883 -uroot@mq_t1#cluster -p**** -A
+    ```shell
+    obclient -h172.30.xx.xx -P2883 -uroot@mq_t1#cluster -p**** -A
     ```
 
 2. 查询租户 Session 级别的系统变量。
 
-      ```sql
+      ```shell
       obclient [(none)]> SHOW VARIABLES LIKE 'ob_query_timeout';
       +------------------+----------+
       | Variable_name    | Value    |
@@ -38,14 +38,14 @@
 
 3. 通过 `SET` 修改 Session 级别变量值。
 
-    ```sql
+    ```shell
     obclient [oceanbase]> SET ob_query_timeout = 20000000;
     Query OK, 0 rows affected
     ```
 
 4. 查看修改结果。
 
-    ```sql
+    ```shell
     obclient [(none)]> SHOW VARIABLES WHERE variable_name LIKE 'ob_query_timeout';
     +------------------+----------+
     | Variable_name    | Value    |
@@ -61,13 +61,13 @@
 
    以登录 `mq_t1` 租户为例：
 
-    ```sql
-    $obclient -h172.30.xx.xx -P2883 -uroot@mq_t1#cluster -p**** -A
+    ```shell
+    obclient -h172.30.xx.xx -P2883 -uroot@mq_t1#cluster -p**** -A
     ```
 
 2. 查询租户的 Global 变量。
 
-    ```sql
+    ```shell
     obclient [(none)]> SHOW GLOBAL VARIABLES WHERE variable_name LIKE  'ob_query_timeout';
     +------------------+----------+
     | Variable_name    | Value    |
@@ -79,14 +79,14 @@
 
 3. 通过 `SET` 修改 Global 级别变量值。
 
-    ```sql
+    ```shell
     obclient [oceanbase]> SET GLOBAL ob_query_timeout = 20000000;
     Query OK, 0 rows affected
     ```
 
 4. 查看修改结果。
 
-    ```sql
+    ```shell
     obclient [(none)]> SHOW GLOBAL VARIABLES WHERE variable_name LIKE 'ob_query_timeout';
     +------------------+----------+
     | Variable_name    | Value    |
