--- a/zh-CN/6.manage/2.tenant-management/5.commom-tenant-operations/8.tenant-scale-in-and-out/2.adjust-resource-specifications.md
+++ b/zh-CN/6.manage/2.tenant-management/5.commom-tenant-operations/8.tenant-scale-in-and-out/2.adjust-resource-specifications.md
@@ -57,13 +57,13 @@ Sum(log_disk_size) <= LOG_DISK_CAPACITY;
 
 1. 使用 root 用户登录集群的 sys 租户。
 
-   ```sql
+   ```shell
    obclient -h172.30.xxx.xxx -P2883 -uroot@sys -pxxxx -A
    ```
 
 2. 查询待操作的租户所属的资源配置 ID。
 
-    ```sql
+    ```shell
     obclient> SELECT a.TENANT_NAME, b.UNIT_CONFIG_ID  FROM oceanbase.DBA_OB_TENANTS a,oceanbase.DBA_OB_RESOURCE_POOLS b WHERE b.TENANT_ID=a.TENANT_ID;
     +----------------+----------------+
     | TENANT_NAME    | UNIT_CONFIG_ID |
@@ -92,19 +92,19 @@ Sum(log_disk_size) <= LOG_DISK_CAPACITY;
 
 1. 使用 root 用户登录到集群的 sys 租户。
 
-    ```sql
+    ```shell
     obclient -h172.30.xxx.xxx -P2883 -uroot@sys -pxxxx -A
     ```
 
-2. 进入 oceanbase 数据库。
+2. 进入 `oceanbase` 数据库。
 
-    ```sql
+    ```shell
     obclient>USE oceanbase;
     ```
 
 3. 查询待操作租户所使用的 `UNIT_CONFIG_ID`。
 
-    ```sql
+    ```shell
     obclient> SELECT a.TENANT_NAME, b.UNIT_CONFIG_ID  FROM oceanbase.DBA_OB_TENANTS a,oceanbase.DBA_OB_RESOURCE_POOLS b WHERE b.TENANT_ID=a.TENANT_ID;
     +----------------+----------------+
     | TENANT_NAME    | UNIT_CONFIG_ID |
@@ -121,7 +121,7 @@ Sum(log_disk_size) <= LOG_DISK_CAPACITY;
 
 4. 查询待操作租户的资源规格详情。
 
-    ```sql
+    ```shell
     obclient> SELECT * FROM oceanbase.DBA_OB_UNIT_CONFIGS WHERE UNIT_CONFIG_ID='1006';
     +----------------+----------------+----------------------------+----------------------------+---------+---------+-------------+---------------+----------+----------+-------------+
     | UNIT_CONFIG_ID | NAME           | CREATE_TIME                | MODIFY_TIME                | MAX_CPU | MIN_CPU | MEMORY_SIZE | LOG_DISK_SIZE | MAX_IOPS | MIN_IOPS | IOPS_WEIGHT |
@@ -135,13 +135,13 @@ Sum(log_disk_size) <= LOG_DISK_CAPACITY;
 
     调大 `S2_unit_config` 配置。
 
-      ```sql
+      ```shell
       obclient> ALTER RESOURCE UNIT S2_unit_config MAX_CPU 5, MIN_CPU 5;
       ```
 
 6. 查询租户当前的资源规格，确认是否修改成功。
 
-    ```sql
+    ```shell
     obclient> SELECT * FROM oceanbase.DBA_OB_UNIT_CONFIGS WHERE UNIT_CONFIG_ID='1006';
     +----------------+----------------+----------------------------+----------------------------+---------+---------+-------------+---------------+----------+----------+-------------+
     | UNIT_CONFIG_ID | NAME           | CREATE_TIME                | MODIFY_TIME                | MAX_CPU | MIN_CPU | MEMORY_SIZE | LOG_DISK_SIZE | MAX_IOPS | MIN_IOPS | IOPS_WEIGHT |
@@ -163,19 +163,19 @@ Sum(log_disk_size) <= LOG_DISK_CAPACITY;
 
 1. 使用 root 用户登录到集群的 sys 租户。
 
-    ```sql
+    ```shell
     obclient -h172.30.xxx.xxx -P2883 -uroot@sys -pxxxx -A
     ```
 
-2. 进入 oceanbase 数据库。
+2. 进入`oceanbase` 数据库。
 
-    ```sql
+    ```shell
     obclient>use oceanbase;
     ```
 
 3. 查询待操作租户所使用的 `UNIT_CONFIG_ID` 和 `RESOURCE_POOL_NAME`。
 
-    ```sql
+    ```shell
     obclient> SELECT a.TENANT_NAME, b.NAME RESOURCE_POOL_NAME, b.UNIT_CONFIG_ID  FROM oceanbase.DBA_OB_TENANTS a,oceanbase.DBA_OB_RESOURCE_POOLS b WHERE b.TENANT_ID=a.TENANT_ID;
     +----------------+---------------------+----------------+
     | TENANT_NAME    | RESOURCE_POOL_NAME  | UNIT_CONFIG_ID |
@@ -192,7 +192,7 @@ Sum(log_disk_size) <= LOG_DISK_CAPACITY;
 
 4. 查询待操作租户的资源规格详情。
 
-    ```sql
+    ```shell
     obclient> SELECT * FROM oceanbase.DBA_OB_UNIT_CONFIGS WHERE UNIT_CONFIG_ID='1006';
     +----------------+----------------+----------------------------+----------------------------+---------+---------+-------------+---------------+----------+----------+-------------+
     | UNIT_CONFIG_ID | NAME           | CREATE_TIME                | MODIFY_TIME                | MAX_CPU | MIN_CPU | MEMORY_SIZE | LOG_DISK_SIZE | MAX_IOPS | MIN_IOPS | IOPS_WEIGHT |
@@ -206,19 +206,19 @@ Sum(log_disk_size) <= LOG_DISK_CAPACITY;
 
     创建比当前资源规格高的 `new_S2_unit_config`。
 
-      ```sql
+      ```shell
       obclient> CREATE RESOURCE UNIT new_S2_unit_config MAX_CPU = 5, MIN_CPU = 5, MEMORY_SIZE = '12884901888',LOG_DISK_SIZE = '38654705664',MAX_IOPS = 30000, MIN_IOPS  = 30000, IOPS_WEIGHT=3;
       ```
 
 6. 调整待操作租户的资源池使用新资源规格。
 
-    ```sql
+    ```shell
     obclient> ALTER RESOURCE POOL mq_pool_01 unit='new_S2_unit_config';
     ```
 
 7. 查询租户当前的资源规格，确认是否修改成功。
 
-    ```sql
+    ```shell
     obclient> SELECT * FROM oceanbase.DBA_OB_UNIT_CONFIGS WHERE UNIT_CONFIG_ID='1006';
     +----------------+--------------------+----------------------------+----------------------------+---------+---------+-------------+---------------+----------+----------+-------------+
     | UNIT_CONFIG_ID | NAME               | CREATE_TIME                | MODIFY_TIME                | MAX_CPU | MIN_CPU | MEMORY_SIZE | LOG_DISK_SIZE | MAX_IOPS | MIN_IOPS | IOPS_WEIGHT |
@@ -236,7 +236,7 @@ Sum(log_disk_size) <= LOG_DISK_CAPACITY;
 
   示例如下：
 
-   ```sql
+   ```shell
    obclient> SELECT * FROM oceanbase.GV$OB_SERVERS;
    +-------------+----------+--------------+----------+--------------+------------------+--------------+------------------+--------------+--------------+-------------------+-------------------+-----------------+--------------------+------------------+-------------------------+--------------+-------------------------+-----------------------+
    | SVR_IP      | SVR_PORT | ZONE         | SQL_PORT | CPU_CAPACITY | CPU_CAPACITY_MAX | CPU_ASSIGNED | CPU_ASSIGNED_MAX | MEM_CAPACITY | MEM_ASSIGNED | LOG_DISK_CAPACITY | LOG_DISK_ASSIGNED | LOG_DISK_IN_USE | DATA_DISK_CAPACITY | DATA_DISK_IN_USE | DATA_DISK_HEALTH_STATUS | MEMORY_LIMIT | DATA_DISK_ABNORMAL_TIME | SSL_CERT_EXPIRED_TIME |
@@ -257,7 +257,7 @@ Sum(log_disk_size) <= LOG_DISK_CAPACITY;
 
   示例如下：
 
-   ```sql
+   ```shell
    obclient> select SVR_IP,SVR_PORT,UNIT_ID,TENANT_ID,MAX_CPU,MIN_CPU,ceil(MEMORY_SIZE/1024/1024/1024) MEMORY_SIZE_G,MAX_IOPS,MIN_IOPS,IOPS_WEIGHT,ceil(LOG_DISK_SIZE/1024/1024/1024) LOG_DISK_SIZE_G,ceil(LOG_DISK_IN_USE/1024/1024/1024) LOG_DISK_IN_USE_G,ceil(DATA_DISK_IN_USE/1024/1024/1024) DATA_DISK_IN_USE_G,STATUS,CREATE_TIME  from oceanbase.GV$OB_UNITS;
    +--------------+----------+---------+-----------+---------+---------+---------------+----------+----------+-------------+-----------------+-------------------+--------------------+--------+----------------------------+
    | SVR_IP       | SVR_PORT | UNIT_ID | TENANT_ID | MAX_CPU | MIN_CPU | MEMORY_SIZE_G | MAX_IOPS | MIN_IOPS | IOPS_WEIGHT | LOG_DISK_SIZE_G | LOG_DISK_IN_USE_G | DATA_DISK_IN_USE_G | STATUS | CREATE_TIME                |
