--- a/zh-CN/6.manage/2.tenant-management/5.commom-tenant-operations/8.tenant-scale-in-and-out/4.adjust-primary-zone.md
+++ b/zh-CN/6.manage/2.tenant-management/5.commom-tenant-operations/8.tenant-scale-in-and-out/4.adjust-primary-zone.md
@@ -6,11 +6,11 @@
 
 1. 使用 root 用户登录到集群的 sys 租户。
 
-    ```sql
+    ```shell
     obclient -h172.30.xxx.xxx -P2883 -uroot@sys -pxxxx -A
     ```
 
-2. 进入 OceanBase 数据库。
+2. 进入 `oceanbase` 数据库。
 
     ```sql
     obclient>use oceanbase;
@@ -18,7 +18,7 @@
 
 3. 查询租户 `mq_t1` 的基本信息，例如 `locality`、`primary zone` 等属性。
 
-   ```sql
+   ```shell
     obclient> SELECT * FROM oceanbase.DBA_OB_TENANTS WHERE tenant_id = 1004;
     +-----------+-------------+-------------+----------------------------+----------------------------+----------------------------------------+------------------------------------------------------------------+-------------------+--------------------+--------+---------------+--------+
     | TENANT_ID | TENANT_NAME | TENANT_TYPE | CREATE_TIME                | MODIFY_TIME                | PRIMARY_ZONE                           | LOCALITY                                                         | PREVIOUS_LOCALITY | COMPATIBILITY_MODE | STATUS | IN_RECYCLEBIN | LOCKED |
@@ -30,7 +30,7 @@
 
 4. 查询租户 `mq_t1` 的 Unit 信息，在单个 Zone 的 `unit num` 为 2。
 
-   ```sql
+   ```shell
     obclient> SELECT * FROM oceanbase.DBA_OB_UNITS WHERE tenant_id = 1004;
     +---------+-----------+--------+------------------+---------------+----------------------------+----------------------------+--------------+-------------+----------+---------------------+-----------------------+----------------+----------------+---------+---------+-------------+---------------+----------+----------+-------------+
     | UNIT_ID | TENANT_ID | STATUS | RESOURCE_POOL_ID | UNIT_GROUP_ID | CREATE_TIME                | MODIFY_TIME                | ZONE         | SVR_IP      | SVR_PORT | MIGRATE_FROM_SVR_IP | MIGRATE_FROM_SVR_PORT | MANUAL_MIGRATE | UNIT_CONFIG_ID | MAX_CPU | MIN_CPU | MEMORY_SIZE | LOG_DISK_SIZE | MAX_IOPS | MIN_IOPS | IOPS_WEIGHT |
@@ -47,7 +47,7 @@
 
 5. 查询租户 `mq_t1` 的日志流信息，对应 `unit num` 为 2 和 `primary zone` 为 1，因此日志流个数为 2。
 
-   ```sql
+   ```shell
     obclient> SELECT * FROM oceanbase.CDB_OB_LS WHERE tenant_id = 1004;
     +-----------+-------+--------+----------------------------------------+---------------+-------------+---------------------+----------+---------------------+---------------------+
     | TENANT_ID | LS_ID | STATUS | PRIMARY_ZONE                           | UNIT_GROUP_ID | LS_GROUP_ID | CREATE_SCN          | DROP_SCN | SYNC_SCN            | READABLE_SCN        |
@@ -61,8 +61,8 @@
 
 6. 修改租户 `mq_t1` 的 `PRIMARY_ZONE` 属性，从 1 调整为 2 。
 
-   ```sql
-    ALTER TENANT mq_t1 PRIMARY_ZONE='sa128_obv4_1,sa128_obv4_2;sa128_obv4_3'; 
+   ```shell
+    obclient> ALTER TENANT mq_t1 PRIMARY_ZONE='sa128_obv4_1,sa128_obv4_2;sa128_obv4_3'; 
    ```
 
 7. 查询租户 `mq_t1` 的基本信息，确认 `PRIMARY_ZONE` 属性修改成功，由 `sa128_obv4_1` 变更为 `sa128_obv4_1,sa128_obv4_2`。
@@ -79,7 +79,7 @@
 
 8. 查询租户 `mq_t1` 的 Unit 信息，变更前后 `unit num` 保持不变。
 
-   ```sql
+   ```shell
     obclient> SELECT * FROM oceanbase.DBA_OB_UNITS WHERE tenant_id = 1004;
     +---------+-----------+--------+------------------+---------------+----------------------------+----------------------------+--------------+-------------+----------+---------------------+-----------------------+----------------+----------------+---------+---------+-------------+---------------+----------+----------+-------------+
     | UNIT_ID | TENANT_ID | STATUS | RESOURCE_POOL_ID | UNIT_GROUP_ID | CREATE_TIME                | MODIFY_TIME                | ZONE         | SVR_IP      | SVR_PORT | MIGRATE_FROM_SVR_IP | MIGRATE_FROM_SVR_PORT | MANUAL_MIGRATE | UNIT_CONFIG_ID | MAX_CPU | MIN_CPU | MEMORY_SIZE | LOG_DISK_SIZE | MAX_IOPS | MIN_IOPS | IOPS_WEIGHT |
@@ -96,7 +96,7 @@
 
 9. 查询租户 `mq_t1` 的日志流信息，变更前为 2，变更后为 4。
 
-   ```sql
+   ```shell
     obclient> SELECT * FROM oceanbase.CDB_OB_LS WHERE tenant_id = 1004;
     +-----------+-------+--------+----------------------------------------+---------------+-------------+---------------------+----------+---------------------+---------------------+
     | TENANT_ID | LS_ID | STATUS | PRIMARY_ZONE                           | UNIT_GROUP_ID | LS_GROUP_ID | CREATE_SCN          | DROP_SCN | SYNC_SCN            | READABLE_SCN        |
