--- a/zh-CN/6.manage/2.tenant-management/5.commom-tenant-operations/9.modify-resource-pool-properties.md
+++ b/zh-CN/6.manage/2.tenant-management/5.commom-tenant-operations/9.modify-resource-pool-properties.md
@@ -15,13 +15,13 @@
 
 1. 使用 root 用户登录到集群的 sys 租户。
 
-    ```sql
-    $obclient -h172.30.xx.xx -P2883 -uroot@sys#cluster -p**** -A
+    ```shell
+    obclient -h172.30.xx.xx -P2883 -uroot@sys#cluster -p**** -A
     ```
 
-2. 进入 OceanBase 数据库。
+2. 进入 `oceanbase` 数据库。
 
-    ```sql
+    ```shell
     obclient [(none)]> USE oceanbase;
     ```
 
@@ -29,7 +29,7 @@
 
     以查询资源池 `mq_pool_02` 的配置信息为例：
 
-    ```sql
+    ```shell
     obclient [oceanbase]> SELECT * FROM DBA_OB_RESOURCE_POOLS WHERE NAME = 'mq_pool_02';
     +------------------+------------+-----------+----------------------------+----------------------------+------------+----------------+-------------+--------------+
     | RESOURCE_POOL_ID | NAME       | TENANT_ID | CREATE_TIME                | MODIFY_TIME                | UNIT_COUNT | UNIT_CONFIG_ID | ZONE_LIST   | REPLICA_TYPE |
@@ -80,7 +80,7 @@
 
       修改资源池 `mq_pool_02` 的资源规格为 `'S2_unit_config'`，资源单元个数为 3，`ZONE_LIST` 为 `'zone1','zone2','zone3'`。
 
-        ```sql
+        ```shell
         obclient [oceanbase]> ALTER RESOURCE POOL mq_pool_02 UNIT='S2_unit_config';
         Query OK, 0 rows affected
 
@@ -97,7 +97,7 @@
 
       修改资源池 `mq_pool_02` 的资源规格为 `'S2_unit_config'`，资源单元个数为 3，ZONE_LIST 为 `'zone1','zone2','zone3'`。
 
-         ```sql
+         ```shell
         obclient [oceanbase]> ALTER RESOURCE POOL mq_pool_02 UNIT='S2_unit_config';
         Query OK, 0 rows affected
 
@@ -112,7 +112,7 @@
 
     结果如下，可以看到 `UNIT_COUNT`、`UNIT_CONFIG_ID`、`ZONE_LIST` 参数已经更新。
 
-    ```sql
+    ```shell
     obclient [oceanbase]> SELECT * FROM DBA_OB_RESOURCE_POOLS WHERE NAME = 'mq_pool_02';
     +------------------+------------+-----------+----------------------------+----------------------------+------------+----------------+-------------------+--------------+
     | RESOURCE_POOL_ID | NAME       | TENANT_ID | CREATE_TIME                | MODIFY_TIME                | UNIT_COUNT | UNIT_CONFIG_ID | ZONE_LIST         | REPLICA_TYPE |
