--- a/zh-CN/6.manage/2.tenant-management/5.commom-tenant-operations/14.delete-resource-pool.md
+++ b/zh-CN/6.manage/2.tenant-management/5.commom-tenant-operations/14.delete-resource-pool.md
@@ -6,7 +6,7 @@
 
 删除资源池前，请确认该资源池当前未被任何租户使用。如果资源池正在被租户使用，则需要将资源池释放后再删除资源池。
 
-* 当租户有多个资源池，可以通过修改资源池配置，从租户中移除资源池。相关操作参见 [修改资源池配置](9.modify-resource-pool-properties.md)。
+* 当租户有多个资源池，可以通过修改租户的资源池配置，从租户中移除资源池。相关操作参见 [修改租户属性](10.modify-tenant-properties.md)。
 
 * 当租户只有一个资源池时，不支持直接移除。
 
@@ -17,13 +17,13 @@
 
 1. 使用 root 用户登录到集群的 sys 租户。
 
-    ```sql
-    $obclient -h172.30.xx.xx -P2883 -uroot@sys#cluster -p**** -A
+    ```shell
+    obclient -h172.30.xx.xx -P2883 -uroot@sys#cluster -p**** -A
     ```
 
-2. 进入 OceanBase 数据库。
+2. 进入 `oceanbase` 数据库。
 
-    ```sql
+    ```shell
     obclient [(none)]> USE oceanbase;
     ```
 
@@ -31,7 +31,7 @@
 
    以查询 `mq_pool_02` 的配置信息为例：
 
-    ```sql
+    ```shell
     obclient [oceanbase]> SELECT TENANT_ID,NAME FROM DBA_OB_RESOURCE_POOLS WHERE NAME = 'mq_pool_02';
     +-----------+------------+
     | tenant_id | name       |
@@ -47,7 +47,7 @@
 
     以删除资源池 `mq_pool_02` 为例：
 
-    ```sql
+    ```shell
     obclient [oceanbase]> DROP RESOURCE POOL mq_pool_02;
     Query OK, 0 rows affected 
     ```
@@ -56,7 +56,14 @@
 
 5. 查看 `DBA_OB_RESOURCE_POOLS` 视图，确认资源池删除成功。
 
-    ```sql
+    ```shell
     obclient [oceanbase]> SELECT * FROM DBA_OB_RESOURCE_POOLS WHERE NAME = 'mq_pool_02';
     Empty set
     ```
+
+## 相关文档
+
+* [新建资源池](2.create-resource-pool.md)
+
+* [修改租户属性](10.modify-tenant-properties.md)
+
