--- a/zh-CN/6.manage/2.tenant-management/5.commom-tenant-operations/6.view-system-variables-of-tenant.md
+++ b/zh-CN/6.manage/2.tenant-management/5.commom-tenant-operations/6.view-system-variables-of-tenant.md
@@ -8,8 +8,8 @@
 
    以 `mq_t1`  租户为例：
 
-    ```sql
-    $obclient -h172.30.xx.xx -P2883 -uroot@mq_t1#cluster -p**** -A
+    ```shell
+    obclient -h172.30.xx.xx -P2883 -uroot@mq_t1#cluster -p**** -A
     ```
 
 2. 通过 SHOW 语句查询系统变量信息。
@@ -29,7 +29,7 @@
 
    * 查询 `ob_query_timeout` 的 Session 级别变量。
 
-      ```sql
+      ```shell
       obclient [oceanbase]> SHOW VARIABLES LIKE 'ob_query_timeout';
       +------------------+-------------+
       | Variable_name    | Value       |
@@ -51,7 +51,7 @@
 
    * 查询 `ob_query_timeout` 的 Global 级别变量。
 
-      ```sql
+      ```shell
       obclient [oceanbase]> SHOW GLOBAL VARIABLES WHERE variable_name LIKE 'ob_query_timeout';
       +------------------+-------------+
       | Variable_name    | Value       |
@@ -67,13 +67,13 @@
 
   1. 使用 root 用户登录到集群的 mysql001 租户。
 
-      ```sql
-      $obclient -P2881 -h172.30.xx.xx -uroot@mysql001#cluster -p**** -A -Doceanbase
+      ```shell
+      obclient -P2881 -h172.30.xx.xx -uroot@mysql001#cluster -p**** -A -Doceanbase
       ```
 
-  2. 进入 OceanBase 数据库。
+  2. 进入 `oceanbase` 数据库。
 
-      ```sql
+      ```shell
       obclient [(none)]> USE oceanbase;
       ```
 
@@ -81,7 +81,7 @@
 
      * 通过 `INFORMATION_SCHEMA.SESSION_VARIABLES` 视图查询 `ob_query_timeout` 的 Session 级别变量值。
 
-        ```sql
+        ```shell
         obclient [oceanbase]> SELECT * FROM INFORMATION_SCHEMA.SESSION_VARIABLES WHERE VARIABLE_NAME = 'ob_query_timeout';
         +------------------+----------------+
         | VARIABLE_NAME    | VARIABLE_VALUE |
@@ -93,7 +93,7 @@
 
      * 通过 `INFORMATION_SCHEMA.GLOBAL_VARIABLES` 视图查询 `ob_query_timeout` 的 Global 级别变量值。
 
-        ```sql
+        ```shell
         obclient [oceanbase]> SELECT * FROM INFORMATION_SCHEMA.GLOBAL_VARIABLES WHERE VARIABLE_NAME = 'ob_query_timeout';
         +------------------+----------------+
         | VARIABLE_NAME    | VARIABLE_VALUE |
@@ -105,17 +105,17 @@
 
 * Oracle 模式
 
-  1. 使用 sys 用户登录到集群的 oracle001 租户。
+  1. 使用 sys 用户登录到集群的 `oracle001` 租户。
 
-      ```sql
-      $obclient -h172.30.xx.xx -P2883 -usys@oracle001#cluster -p**** -A
+      ```shell
+      obclient -h172.30.xx.xx -P2883 -usys@oracle001#cluster -p**** -A
       ```
 
   2. 通过视图查询变量值。
 
      * 通过 `SYS.TENANT_VIRTUAL_SESSION_VARIABLE` 视图查询 `ob_query_timeout` 的 Session 级别变量值。
 
-        ```sql
+        ```shell
         obclient [SYS]> SELECT * FROM SYS.TENANT_VIRTUAL_SESSION_VARIABLE WHERE VARIABLE_NAME = 'ob_query_timeout';
         +------------------+----------+
         | VARIABLE_NAME    | VALUE    |
@@ -127,7 +127,7 @@
 
      * 通过 `SYS.TENANT_VIRTUAL_GLOBAL_VARIABLE` 视图查询 `ob_query_timeout` 的 Global 级别的变量值。
 
-        ```sql
+        ```shell
         obclient [SYS]> SELECT * FROM SYS.TENANT_VIRTUAL_GLOBAL_VARIABLE WHERE VARIABLE_NAME = 'ob_query_timeout';
         +------------------+----------+
         | VARIABLE_NAME    | VALUE    |
