--- a/zh-CN/6.manage/2.tenant-management/5.commom-tenant-operations/8.tenant-scale-in-and-out/1.introduction-to-tenant-scale-in-and-out.md
+++ b/zh-CN/6.manage/2.tenant-management/5.commom-tenant-operations/8.tenant-scale-in-and-out/1.introduction-to-tenant-scale-in-and-out.md
@@ -12,10 +12,10 @@
   
   * Unit Number 由 N 变为 M 时，表示每个 Primary Zone 上，需要新增 M - N 个日志流，分布在 M - N 个新增的 Unit Group 上。
   
-    详细信息，参见 [通过调整资源规格实现租户扩缩容](2.adjust-resource-specifications.md)
+    详细信息，参见 [通过调整 Unit Number 实现租户扩缩容](3.adjust-unit-number.md)
 
   * Primary Zone 个数由 N 变为 M 时，表示每个 Unit Group 内，需要新增 M - N 个日志流，其 Leader 分布在 M - N 个新增的 Primary Zone 上。
 
-    详细信息，参见 [通过调整资源规格实现租户扩缩容](2.adjust-resource-specifications.md)
+    详细信息，参见 [通过调整 Primary Zone 实现租户扩缩容](4.adjust-primary-zone.md)
 
 缩容是扩容的反操作，本质上是降低租户的服务能力，包括计算能力和存储容量。可以是调小资源规格，从而降低单节点的服务能力；也可以是通过减少服务节点，包括减少 Primary Zone 个数和减少 Unit Number，从而降低租户的总服务能力。
