--- a/zh-CN/6.manage/2.tenant-management/5.commom-tenant-operations/8.tenant-scale-in-and-out/3.adjust-unit-number.md
+++ b/zh-CN/6.manage/2.tenant-management/5.commom-tenant-operations/8.tenant-scale-in-and-out/3.adjust-unit-number.md
@@ -28,19 +28,19 @@ OceanBase 数据库 V4.0.0 版本暂不支持调小 Unit Number。
 
 1. 使用 root 用户登录到集群的 sys 租户。
 
-    ```sql
+    ```shell
     obclient -h172.30.xxx.xxx -P2883 -uroot@sys -pxxxx -A
     ```
 
-2. 进入 oceanbase 数据库。
+2. 进入 `oceanbase` 数据库。
 
-    ```sql
+    ```shell
     obclient>use oceanbase;
     ```
 
 3. 查看租户 `mq_t1` 信息，获取其 `TENANT_ID`。
 
-   ```sql
+   ```shell
     obclient> SELECT * FROM oceanbase.DBA_OB_TENANTS WHERE TENANT_NAME = 'mq_t1';
     +-----------+-------------+-------------+----------------------------+----------------------------+----------------------------------------+------------------------------------------------------------------+-------------------+--------------------+--------+---------------+--------+
     | TENANT_ID | TENANT_NAME | TENANT_TYPE | CREATE_TIME                | MODIFY_TIME                | PRIMARY_ZONE                           | LOCALITY                                                         | PREVIOUS_LOCALITY | COMPATIBILITY_MODE | STATUS | IN_RECYCLEBIN | LOCKED |
@@ -52,7 +52,7 @@ OceanBase 数据库 V4.0.0 版本暂不支持调小 Unit Number。
 
 4. 查看租户 `mq_t1` 所拥有的 Unit。
 
-   ```sql
+   ```shell
     obclient> SELECT * FROM oceanbase.DBA_OB_UNITS WHERE TENANT_ID = 1004;
     +---------+-----------+--------+------------------+---------------+----------------------------+----------------------------+--------------+------------+----------+---------------------+-----------------------+----------------+----------------+---------+---------+-------------+---------------+----------+----------+-------------+
     | UNIT_ID | TENANT_ID | STATUS | RESOURCE_POOL_ID | UNIT_GROUP_ID | CREATE_TIME                | MODIFY_TIME                | ZONE         | SVR_IP     | SVR_PORT | MIGRATE_FROM_SVR_IP | MIGRATE_FROM_SVR_PORT | MANUAL_MIGRATE | UNIT_CONFIG_ID | MAX_CPU | MIN_CPU | MEMORY_SIZE | LOG_DISK_SIZE | MAX_IOPS | MIN_IOPS | IOPS_WEIGHT |
@@ -66,7 +66,7 @@ OceanBase 数据库 V4.0.0 版本暂不支持调小 Unit Number。
 
 5. 查看租户 `mq_t1` 目前所拥有的日志流。
 
-   ```sql
+   ```shell
     obclient> SELECT * FROM oceanbase.CDB_OB_LS WHERE TENANT_ID = 1004;
     +-----------+-------+--------+----------------------------------------+---------------+-------------+---------------------+----------+---------------------+---------------------+
     | TENANT_ID | LS_ID | STATUS | PRIMARY_ZONE                           | UNIT_GROUP_ID | LS_GROUP_ID | CREATE_SCN          | DROP_SCN | SYNC_SCN            | READABLE_SCN        |
@@ -79,13 +79,13 @@ OceanBase 数据库 V4.0.0 版本暂不支持调小 Unit Number。
 
 6. 把租户 `mq_t1` 的 `UNIT_NUM` 修改为 2。
 
-   ```sql
+   ```shell
     obclient> ALTER RESOURCE TENANT mq_t1 UNIT_NUM = 2;
    ```
 
 7. 查看租户 `mq_t1` 修改后的 Unit。
 
-   ```sql
+   ```shell
     obclient> SELECT * FROM oceanbase.DBA_OB_UNITS WHERE TENANT_ID = 1004;
     +---------+-----------+--------+------------------+---------------+----------------------------+----------------------------+--------------+-------------+----------+---------------------+-----------------------+----------------+----------------+---------+---------+-------------+---------------+----------+----------+-------------+
     | UNIT_ID | TENANT_ID | STATUS | RESOURCE_POOL_ID | UNIT_GROUP_ID | CREATE_TIME                | MODIFY_TIME                | ZONE         | SVR_IP      | SVR_PORT | MIGRATE_FROM_SVR_IP | MIGRATE_FROM_SVR_PORT | MANUAL_MIGRATE | UNIT_CONFIG_ID | MAX_CPU | MIN_CPU | MEMORY_SIZE | LOG_DISK_SIZE | MAX_IOPS | MIN_IOPS | IOPS_WEIGHT |
@@ -102,7 +102,7 @@ OceanBase 数据库 V4.0.0 版本暂不支持调小 Unit Number。
 
 8. 查看租户 `mq_t1` 修改后的日志流。
 
-   ```sql
+   ```shell
     obclient> SELECT * FROM oceanbase.CDB_OB_LS WHERE TENANT_ID = 1004;
     +-----------+-------+--------+----------------------------------------+---------------+-------------+---------------------+----------+---------------------+---------------------+
     | TENANT_ID | LS_ID | STATUS | PRIMARY_ZONE                           | UNIT_GROUP_ID | LS_GROUP_ID | CREATE_SCN          | DROP_SCN | SYNC_SCN            | READABLE_SCN        |
